<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fundo">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:background="@color/azulEscuro">

        <ImageView
            android:id="@+id/papel_tesoura"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:src="@drawable/ic_play"
            app:tint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_vocesabia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:text="@string/voc_j_jogou_pedra_papel_e_tesoura"/>

    <TextView
        android:id="@+id/text_explicacao_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/text_vocesabia"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:text="@string/o_jogo_pedra_papel_e_tesoura_uma_brincadeira_simples_e_popular_jogada_entre_duas_pessoas" />

    <TextView
        android:id="@+id/text_explicacao_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/text_explicacao_1"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:text="@string/a_vit_ria_determinada_pelas_regras_pedra_vence_tesoura_tesoura_vence_papel_e_papel_vence_pedra" />


    <Button
        android:id="@+id/botaoJogar"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="15sp"
        android:backgroundTint="@color/azulEscuro"
        android:text="@string/jogar" />
</RelativeLayout>